fix menu titles

--- a/docs/providers/aws/events/s3.md
+++ b/docs/providers/aws/events/s3.md
@@ -1,6 +1,6 @@
 <!--
 title: Serverless Framework - AWS Lambda Events - S3
-menuText: S3 Event config
+menuText: S3
 menuOrder: 3
 description:  Setting up AWS S3 Events with AWS Lambda via the Serverless Framework
 layout: Doc
